# StockMonitoring

./: README.md  RUNNING.md  docker-compose.yml
bknd_stock/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  serve.py  stocks.json
bknd_stock/bknd_stock/: alerter.py  api.py  config.py  models.py  monitor.py  news.py
frtnd_stock/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frtnd_stock/src/: App.css  App.jsx  index.css  main.jsx  version.js
frtnd_stock/src/components/: AlertFeed.css  AlertFeed.jsx  CompanyTable.css  CompanyTable.jsx  Header.css  Header.jsx  NewsFeed.css  NewsFeed.jsx  PriceCard.css  PriceCard.jsx  PriceGrid.css  PriceGrid.jsx
frtnd_stock/src/hooks/: useStockStream.js
