[project]
name = "bknd-stock"
version = "0.1.0"
description = "Stock price monitor with news feed alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.54",
    "feedparser>=6.0.11",
    "rich>=13.9.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
bknd-stock = "bknd_stock.main:main"
